Use jdk 20 api