@@ -29,10 +29,8 @@ import static java.util.Map.entry;
 
 import java.io.IOException;
 import java.lang.System.Logger.Level;
-import java.lang.foreign.Addressable;
-import java.lang.foreign.MemoryAddress;
+import java.lang.foreign.Arena;
 import java.lang.foreign.MemorySegment;
-import java.lang.foreign.MemorySession;
 import java.lang.foreign.ValueLayout;
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
@@ -42,6 +40,14 @@ import java.util.concurrent.atomic.AtomicInteger;
 
 import org.win.HKEY__;
 import org.win.Windows;
+import org.win.Windows_1;
+import org.win.Windows_13;
+import org.win.Windows_2;
+import org.win.Windows_5;
+import org.win.Windows_6;
+import org.win.Windows_7;
+import org.win.Windows_8;
+import org.win.Windows_9;
 import org.win._COMMPROP;
 import org.win._COMMTIMEOUTS;
 import org.win._COMSTAT;
@@ -68,17 +74,17 @@ final class WinSerialPort extends ReadWritePort {
 	}
 
 
-	private record HANDLE(MemoryAddress handle) {
+	private record HANDLE(MemorySegment handle) {
 		static final HANDLE Invalid = new HANDLE(Windows.INVALID_HANDLE_VALUE());
 
-		static HANDLE of(final MemoryAddress handle) { return new HANDLE(handle); }
+		static HANDLE of(final MemorySegment handle) { return new HANDLE(handle); }
 
 		boolean invalid() { return handle().equals(Invalid.handle()); }
 
 		boolean valid() { return !invalid(); }
 
 		@Override
-		public String toString() { return "0x" + Long.toUnsignedString(handle.toRawLongValue(), 16); }
+		public String toString() { return "0x" + Long.toUnsignedString(handle.address(), 16); }
 	}
 
 	// only call inside lock
@@ -92,29 +98,29 @@ final class WinSerialPort extends ReadWritePort {
 		logger.log(TRACE, "query serial port names from registry");
 		final var portNames = new ArrayList<String>();
 
-		try (var session = MemorySession.openConfined()) {
-			final var subKey = session.allocateUtf8String("HARDWARE\\DEVICEMAP\\SERIALCOMM");
-			final var serialCommKey = HKEY__.allocate(session);
+		try (var arena = Arena.openConfined()) {
+			final var subKey = arena.allocateUtf8String("HARDWARE\\DEVICEMAP\\SERIALCOMM");
+			final var serialCommKey = HKEY__.allocate(arena);
 
-			int ret = Windows.RegOpenKeyExA(Windows.HKEY_LOCAL_MACHINE(), subKey, 0, Windows.KEY_READ(), serialCommKey);
-			if (ret == Windows.ERROR_SUCCESS()) {
+			int ret = Windows_7.RegOpenKeyExA(Windows_13.HKEY_LOCAL_MACHINE(), subKey, 0, Windows_8.KEY_READ(), serialCommKey);
+			if (ret == Windows_9.ERROR_SUCCESS()) {
 				final int size = 256;
-				final var deviceName = session.allocate(size);
-				final var deviceNameLength = session.allocate(ValueLayout.JAVA_INT, size);
-				final var portName = session.allocate(size);
-				final var portNameLength = session.allocate(ValueLayout.JAVA_INT, size);
+				final var deviceName = arena.allocate(size);
+				final var deviceNameLength = arena.allocate(ValueLayout.JAVA_INT, size);
+				final var portName = arena.allocate(size);
+				final var portNameLength = arena.allocate(ValueLayout.JAVA_INT, size);
 
 				for (int i = 0;; i++) {
 					// reinit chars with size on every iteration
 					deviceNameLength.set(ValueLayout.JAVA_INT, 0, size);
 					portNameLength.set(ValueLayout.JAVA_INT, 0, size);
-					ret = Windows.RegEnumValueA(MemoryAddress.ofLong(HKEY__.unused$get(serialCommKey)), i, deviceName,
-							deviceNameLength, Windows.NULL(), Windows.NULL(), portName, portNameLength);
+					ret = Windows_7.RegEnumValueA(MemorySegment.ofAddress(HKEY__.unused$get(serialCommKey)), i, deviceName,
+							deviceNameLength, Windows_8.NULL(), Windows_8.NULL(), portName, portNameLength);
 
-					if (ret == Windows.ERROR_NO_MORE_ITEMS())
+					if (ret == Windows_9.ERROR_NO_MORE_ITEMS())
 						break;
 
-					if (ret == Windows.ERROR_SUCCESS()) {
+					if (ret == Windows_9.ERROR_SUCCESS()) {
 						final String port = extractString(portName, portNameLength);
 						logger.log(TRACE, "{0} = {1}", extractString(deviceName, deviceNameLength), port);
 						portNames.add(port);
@@ -123,7 +129,7 @@ final class WinSerialPort extends ReadWritePort {
 						logger.log(WARNING, "RegEnumValueA error: {0}", formatWinError(ret));
 					}
 				}
-				Windows.RegCloseKey(serialCommKey);
+				Windows_7.RegCloseKey(serialCommKey);
 			}
 			else {
 				logger.log(TRACE, "RegOpenKeyExA error: {0}", formatWinError(ret));
@@ -152,7 +158,7 @@ final class WinSerialPort extends ReadWritePort {
 	}
 
 	@Override
-	void open(final MemorySession session, final String portId) throws IOException {
+	void open(final Arena arena, final String portId) throws IOException {
 		final String name = portId.toUpperCase().startsWith("COM") ? "\\\\.\\" + portId : portId;
 		final HANDLE h = open(name, true, null);
 		if (h.invalid())
@@ -160,23 +166,23 @@ final class WinSerialPort extends ReadWritePort {
 
 		this.h = h;
 		try {
-			final int fileType = Windows.GetFileType(h.handle());
-			if (fileType != Windows.FILE_TYPE_CHAR() && fileType != Windows.FILE_TYPE_UNKNOWN())
+			final int fileType = Windows_5.GetFileType(h.handle());
+			if (fileType != Windows_2.FILE_TYPE_CHAR() && fileType != Windows_2.FILE_TYPE_UNKNOWN())
 				throw newIoException(name);
 
-			final var cp = _COMMPROP.allocate(session);
-			if (Windows.GetCommProperties(h.handle(), cp) == 0)
+			final var cp = _COMMPROP.allocate(arena);
+			if (Windows_6.GetCommProperties(h.handle(), cp) == 0)
 				throw newIoException(name);
 			if (debug()) {
 				// set rx and tx queues (rx will usually keep some default buffer, 4K or similar...)
-				Windows.SetupComm(h.handle(), 200, 200);
-				if (Windows.GetCommProperties(h.handle(), cp) == 0)
+				Windows_6.SetupComm(h.handle(), 200, 200);
+				if (Windows_6.GetCommProperties(h.handle(), cp) == 0)
 					throw newIoException(name);
 				final int tx = _COMMPROP.dwCurrentTxQueue$get(cp);
 				final int rx = _COMMPROP.dwCurrentRxQueue$get(cp);
 				logger.log(TRACE, "set queue tx {0} rx {1}", tx, rx);
 			}
-			if (Windows.EscapeCommFunction(h.handle(), Windows.SETDTR()) == 0)
+			if (Windows_6.EscapeCommFunction(h.handle(), Windows_2.SETDTR()) == 0)
 				throw newIoException();
 
 			maxBaudRate = _COMMPROP.dwMaxBaud$get(cp);
@@ -188,28 +194,28 @@ final class WinSerialPort extends ReadWritePort {
 	}
 
 	@Override
-	void baudRate(final MemorySession session, final int baudrate) throws IOException {
+	void baudRate(final Arena arena, final int baudrate) throws IOException {
 		if (maxBaudRate > 0 && baudrate > maxBaudRate)
 			throw new IOException("baud rate %d > max. allowed baud rate %d".formatted(baudrate, maxBaudRate));
 
-		final var dcb = commState(session);
+		final var dcb = commState(arena);
 		_DCB.BaudRate$set(dcb, baudrate);
 		setDcbBits(dcb, "fAbortOnError", Windows.FALSE());
-		if (Windows.SetCommState(h.handle(), dcb) == 0)
+		if (Windows_6.SetCommState(h.handle(), dcb) == 0)
 			throw newIoException();
 	}
 
 	@Override
-	int baudRate(final MemorySession session) throws IOException {
-		final var dcb = commState(session);
+	int baudRate(final Arena arena) throws IOException {
+		final var dcb = commState(arena);
 		return _DCB.BaudRate$get(dcb);
 	}
 
 	@Override
-	void parity(final MemorySession session, final Parity parity) throws IOException {
-		final var dcb = commState(session);
+	void parity(final Arena arena, final Parity parity) throws IOException {
+		final var dcb = commState(arena);
 		_DCB.Parity$set(dcb, (byte) parity.value());
-		setDcbBits(dcb, "fParity", parity.value() != Windows.NOPARITY() ? 1 : 0);
+		setDcbBits(dcb, "fParity", parity.value() != Windows_2.NOPARITY() ? 1 : 0);
 		setDcbBits(dcb, "fAbortOnError", Windows.FALSE());
 
 		final char parityReplace = '\0';
@@ -222,51 +228,51 @@ final class WinSerialPort extends ReadWritePort {
 			_DCB.ErrorChar$set(dcb, (byte) parityReplace);
 		}
 
-		if (Windows.SetCommState(h.handle(), dcb) == 0)
+		if (Windows_6.SetCommState(h.handle(), dcb) == 0)
 			throw newIoException();
 	}
 
 	@Override
-	Parity parity(final MemorySession session) throws IOException {
-		final var dcb = commState(session);
+	Parity parity(final Arena arena) throws IOException {
+		final var dcb = commState(arena);
 		return Parity.values()[_DCB.Parity$get(dcb)];
 	}
 
 	@Override
-	void dataBits(final MemorySession session, final int databits) throws IOException {
-		final var dcb = commState(session);
+	void dataBits(final Arena arena, final int databits) throws IOException {
+		final var dcb = commState(arena);
 		_DCB.ByteSize$set(dcb, (byte) databits);
 		setDcbBits(dcb, "fAbortOnError", Windows.FALSE());
-		if (Windows.SetCommState(h.handle(), dcb) == 0)
+		if (Windows_6.SetCommState(h.handle(), dcb) == 0)
 			throw newIoException();
 	}
 
 	@Override
-	int dataBits(final MemorySession session) throws IOException {
-		final var dcb = commState(session);
+	int dataBits(final Arena arena) throws IOException {
+		final var dcb = commState(arena);
 		return _DCB.ByteSize$get(dcb);
 	}
 
 	@Override
-	void stopBits(final MemorySession session, final StopBits stopbits) throws IOException {
-		final var dcb = commState(session);
+	void stopBits(final Arena arena, final StopBits stopbits) throws IOException {
+		final var dcb = commState(arena);
 		_DCB.StopBits$set(dcb, (byte) platformStopBits(stopbits));
 		setDcbBits(dcb, "fAbortOnError", Windows.FALSE());
-		if (Windows.SetCommState(h.handle(), dcb) == 0)
+		if (Windows_6.SetCommState(h.handle(), dcb) == 0)
 			throw newIoException();
 	}
 
 	@Override
-	StopBits stopBits(final MemorySession session) throws IOException {
-		final var dcb = commState(session);
+	StopBits stopBits(final Arena arena) throws IOException {
+		final var dcb = commState(arena);
 		return genericStopBits(_DCB.StopBits$get(dcb));
 	}
 
 	@Override
-	void flowControl(final MemorySession session, final FlowControl flowControl) throws IOException {
-		final var dcb = commState(session);
+	void flowControl(final Arena arena, final FlowControl flowControl) throws IOException {
+		final var dcb = commState(arena);
 		setDcbBits(dcb, "fOutxDsrFlow", Windows.FALSE());
-		setDcbBits(dcb, "fDtrControl", Windows.DTR_CONTROL_DISABLE());
+		setDcbBits(dcb, "fDtrControl", Windows_2.DTR_CONTROL_DISABLE());
 		setDcbBits(dcb, "fDsrSensitivity", Windows.FALSE());
 		setDcbBits(dcb, "fTXContinueOnXoff", Windows.FALSE());
 		setDcbBits(dcb, "fOutX", Windows.FALSE());
@@ -276,30 +282,30 @@ final class WinSerialPort extends ReadWritePort {
 		switch (flowControl) {
 			case CtsRts -> {
 				setDcbBits(dcb, "fOutxCtsFlow", Windows.TRUE());
-				setDcbBits(dcb, "fRtsControl", Windows.RTS_CONTROL_HANDSHAKE());
+				setDcbBits(dcb, "fRtsControl", Windows_2.RTS_CONTROL_HANDSHAKE());
 			}
 			case None -> {
 				setDcbBits(dcb, "fOutxCtsFlow", Windows.FALSE());
-				setDcbBits(dcb, "fRtsControl", Windows.RTS_CONTROL_DISABLE());
+				setDcbBits(dcb, "fRtsControl", Windows_2.RTS_CONTROL_DISABLE());
 			}
 		}
 
 		setDcbBits(dcb, "fAbortOnError", Windows.FALSE());
-		if (Windows.SetCommState(h.handle(), dcb) == 0)
+		if (Windows_6.SetCommState(h.handle(), dcb) == 0)
 			throw newIoException();
 	}
 
 	@Override
-	FlowControl flowControl(final MemorySession session) throws IOException {
-		final var dcb = commState(session);
+	FlowControl flowControl(final Arena arena) throws IOException {
+		final var dcb = commState(arena);
 		final int flag = getDcbBits(dcb, "fOutxCtsFlow");
 		return flag == 1 ? FlowControl.CtsRts : FlowControl.None;
 	}
 
-	private MemorySegment commState(final MemorySession session) throws IOException {
-		final var dcb = _DCB.allocate(session);
+	private MemorySegment commState(final Arena arena) throws IOException {
+		final var dcb = _DCB.allocate(arena);
 		_DCB.DCBlength$set(dcb, (int) _DCB.sizeof());
-		if (Windows.GetCommState(h.handle(), dcb) == 0)
+		if (Windows_6.GetCommState(h.handle(), dcb) == 0)
 			throw newIoException();
 		return dcb;
 	}
@@ -309,7 +315,7 @@ final class WinSerialPort extends ReadWritePort {
 	public void close() {
 		if (h.valid()) {
 			logger.log(TRACE, "close handle {0}", h);
-			final boolean closed = Windows.CloseHandle(h.handle()) == Windows.TRUE();
+			final boolean closed = Windows_6.CloseHandle(h.handle()) == Windows.TRUE();
 			h = HANDLE.Invalid;
 			if (!closed)
 				logger.log(ERROR, "closing serial port: {0}", formatWinError(QUERY_GETLASTERROR));
@@ -323,15 +329,15 @@ final class WinSerialPort extends ReadWritePort {
 
 	private HANDLE open(final String portId, final boolean overlapped, /*DWORD*/ final AtomicInteger lastError) {
 		logger.log(TRACE, "open {0}", portId);
-		try (var session = MemorySession.openConfined()) {
+		try (var arena = Arena.openConfined()) {
 			// clearing last error not necessary, but jvm/debugger sometimes have set some error code
 //			Windows.SetLastError(0);
-			final var h = Windows.CreateFileA(session.allocateUtf8String(portId),
-					Windows.GENERIC_READ() | Windows.GENERIC_WRITE(), 0, Windows.NULL(), Windows.OPEN_EXISTING(),
-					Windows.FILE_ATTRIBUTE_NORMAL() | (overlapped ? Windows.FILE_FLAG_OVERLAPPED() : 0),
-					Windows.NULL());
+			final var h = Windows_5.CreateFileA(arena.allocateUtf8String(portId),
+					Windows_8.GENERIC_READ() | Windows_8.GENERIC_WRITE(), 0, Windows_8.NULL(), Windows_2.OPEN_EXISTING(),
+					Windows_1.FILE_ATTRIBUTE_NORMAL() | (overlapped ? Windows_2.FILE_FLAG_OVERLAPPED() : 0),
+					Windows_8.NULL());
 			if (lastError != null)
-				lastError.set(Windows.GetLastError());
+				lastError.set(Windows_5.GetLastError());
 			return HANDLE.of(h);
 		}
 	}
@@ -342,8 +348,8 @@ final class WinSerialPort extends ReadWritePort {
 		// if handle is valid, port exists, otherwise it depends on last error: on existing, but
 		// used port, we would get ERROR_ACCESS_DENIED or ERROR_SHARING_VIOLATION (or similar)
 		if (h.valid())
-			Windows.CloseHandle(h.handle());
-		else if (error.get() == Windows.ERROR_FILE_NOT_FOUND() || error.get() == Windows.ERROR_PATH_NOT_FOUND())
+			Windows_6.CloseHandle(h.handle());
+		else if (error.get() == Windows_9.ERROR_FILE_NOT_FOUND() || error.get() == Windows_9.ERROR_PATH_NOT_FOUND())
 			return false;
 		else
 			logger.log(Level.DEBUG, "opening {0}: {1}", portId, formatWinError(error.get()));
@@ -353,15 +359,15 @@ final class WinSerialPort extends ReadWritePort {
 
 	private static int platformStopBits(final StopBits stopbits) {
 		return switch (stopbits) {
-			case One -> Windows.ONESTOPBIT();
-			case Two -> Windows.TWOSTOPBITS();
+			case One -> Windows_2.ONESTOPBIT();
+			case Two -> Windows_2.TWOSTOPBITS();
 		};
 	}
 
 	private static StopBits genericStopBits(final int stopbits) {
-		if (stopbits == Windows.ONESTOPBIT())
+		if (stopbits == Windows_2.ONESTOPBIT())
 			return StopBits.One;
-		if (stopbits == Windows.TWOSTOPBITS())
+		if (stopbits == Windows_2.TWOSTOPBITS())
 			return StopBits.Two;
 		throw new RuntimeException("unsupported stopbits " + stopbits);
 	}
@@ -435,17 +441,17 @@ final class WinSerialPort extends ReadWritePort {
 
 	//call *immediately* after read/write
 	private static void waitPendingIO(final HANDLE h, /*OVERLAPPED* */ final MemorySegment overlapped,
-			final Addressable transferred) throws IOException {
+		final MemorySegment transferred) throws IOException {
 //		logger.log(TRACE, "wait pending I/O");
 		// the only status tolerated is I/O pending
-		if (Windows.GetLastError() != Windows.NO_ERROR() && Windows.GetLastError() != Windows.ERROR_IO_PENDING())
+		if (Windows_5.GetLastError() != Windows_9.NO_ERROR() && Windows_5.GetLastError() != Windows_9.ERROR_IO_PENDING())
 			// some I/O problem, throw error
 			throw newIoException();
 
 		// wait for operation completion, and check result
-		/*DWORD*/ final int res = Windows.WaitForSingleObject(_OVERLAPPED.hEvent$get(overlapped), Windows.INFINITE());
-		if (res == Windows.WAIT_OBJECT_0()
-				&& Windows.GetOverlappedResult(h.handle(), overlapped, transferred, Windows.FALSE()) != 0) {
+		/*DWORD*/ final int res = Windows_6.WaitForSingleObject(_OVERLAPPED.hEvent$get(overlapped), Windows_9.INFINITE());
+		if (res == Windows_9.WAIT_OBJECT_0()
+				&& Windows_6.GetOverlappedResult(h.handle(), overlapped, transferred, Windows.FALSE()) != 0) {
 			// completed successfully
 			return;
 		}
@@ -453,22 +459,22 @@ final class WinSerialPort extends ReadWritePort {
 		throw newIoException();
 	}
 
-	private static int write(final MemorySession session, final HANDLE h, final MemorySegment bytes) throws IOException {
-		final var event = Windows.CreateEventA(Windows.NULL(), Windows.TRUE(), Windows.FALSE(), Windows.NULL());
-		if (event.equals(Windows.NULL()))
+	private static int write(final Arena arena, final HANDLE h, final MemorySegment bytes) throws IOException {
+		final var event = Windows_6.CreateEventA(Windows_8.NULL(), Windows.TRUE(), Windows.FALSE(), Windows_8.NULL());
+		if (event.equals(Windows_8.NULL()))
 			throw newIoException();
 
-		final var written = session.allocate(ValueLayout.JAVA_INT, 0);
+		final var written = arena.allocate(ValueLayout.JAVA_INT, 0);
 		try {
-			final var o = _OVERLAPPED.allocate(session);
+			final var o = _OVERLAPPED.allocate(arena);
 			_OVERLAPPED.hEvent$set(o, event);
 
-			if (Windows.WriteFile(h.handle(), bytes, (int) bytes.byteSize(), written, o) == 0)
+			if (Windows_6.WriteFile(h.handle(), bytes, (int) bytes.byteSize(), written, o) == 0)
 				waitPendingIO(h, o, written);
-			Windows.FlushFileBuffers(h.handle());
+			Windows_6.FlushFileBuffers(h.handle());
 		}
 		finally {
-			Windows.CloseHandle(event);
+			Windows_6.CloseHandle(event);
 		}
 		return (int) bytes.byteSize();
 		// in overlapped mode, the param for number of bytes written is useless
@@ -476,25 +482,25 @@ final class WinSerialPort extends ReadWritePort {
 	}
 
 	@Override
-	int writeBytes(final MemorySession session, final MemorySegment bytes) throws IOException {
-		return write(session, h, bytes);
+	int writeBytes(final Arena arena, final MemorySegment bytes) throws IOException {
+		return write(arena, h, bytes);
 	}
 
-	private static int read(final MemorySession session, final HANDLE h, final MemorySegment bytes) throws IOException {
-		final var event = Windows.CreateEventA(Windows.NULL(), Windows.TRUE(), Windows.FALSE(), Windows.NULL());
-		if (event.equals(Windows.NULL()))
+	private static int read(final Arena arena, final HANDLE h, final MemorySegment bytes) throws IOException {
+		final var event = Windows_6.CreateEventA(Windows_8.NULL(), Windows.TRUE(), Windows.FALSE(), Windows_8.NULL());
+		if (event.equals(Windows_8.NULL()))
 			throw newIoException();
 
-		final var o = _OVERLAPPED.allocate(session);
+		final var o = _OVERLAPPED.allocate(arena);
 		_OVERLAPPED.hEvent$set(o, event);
 
-		final /*DWORD*/ var read = session.allocate(ValueLayout.JAVA_INT, 0);
+		final /*DWORD*/ var read = arena.allocate(ValueLayout.JAVA_INT, 0);
 		try {
-			if (Windows.ReadFile(h.handle(), bytes, (int) bytes.byteSize(), read, o) == 0)
+			if (Windows_6.ReadFile(h.handle(), bytes, (int) bytes.byteSize(), read, o) == 0)
 				waitPendingIO(h, o, read);
 		}
 		finally {
-			Windows.CloseHandle(event);
+			Windows_6.CloseHandle(event);
 		}
 		return (int) bytes.byteSize();
 		// in overlapped mode, the param for number of bytes read is useless
@@ -502,21 +508,21 @@ final class WinSerialPort extends ReadWritePort {
 	}
 
 	@Override
-	int readBytes(final MemorySession session, final MemorySegment bytes) throws IOException {
-		return read(session, h, bytes);
+	int readBytes(final Arena arena, final MemorySegment bytes) throws IOException {
+		return read(arena, h, bytes);
 	}
 
 	@Override
 	public void setEvents(final int eventMask, final boolean enable) throws IOException {
 		logger.log(TRACE, "set event: mask 0x{0}, enable={1}",  Integer.toUnsignedString(eventMask, 16), enable);
-		try (var session = MemorySession.openConfined()) {
-			/*DWORD*/ final var mask = session.allocate(ValueLayout.JAVA_INT, 0);
-			if (Windows.GetCommMask(h.handle(), mask) == 0)
+		try (var arena = Arena.openConfined()) {
+			/*DWORD*/ final var mask = arena.allocate(ValueLayout.JAVA_INT, 0);
+			if (Windows_6.GetCommMask(h.handle(), mask) == 0)
 				throw newIoException();
 
 			final int m = mask.get(ValueLayout.JAVA_INT, 0);
 			final int set = enable ? m | eventMask : m & ~eventMask;
-			if (Windows.SetCommMask(h.handle(), set) == 0)
+			if (Windows_6.SetCommMask(h.handle(), set) == 0)
 				throw newIoException();
 		}
 	}
@@ -524,26 +530,26 @@ final class WinSerialPort extends ReadWritePort {
 	@Override
 	public int waitEvent() throws IOException {
 		logger.log(TRACE, "wait comm event");
-		try (var session = MemorySession.openConfined()) {
-			final var event = Windows.CreateEventA(Windows.NULL(), Windows.TRUE(), Windows.FALSE(), Windows.NULL());
-			if (event.equals(Windows.NULL()))
+		try (var arena = Arena.openConfined()) {
+			final var event = Windows_6.CreateEventA(Windows_8.NULL(), Windows.TRUE(), Windows.FALSE(), Windows_8.NULL());
+			if (event.equals(Windows_8.NULL()))
 				throw newIoException();
 
-			final var o = _OVERLAPPED.allocate(session);
+			final var o = _OVERLAPPED.allocate(arena);
 			_OVERLAPPED.hEvent$set(o, event);
-			final /*DWORD*/ var eventMask = session.allocate(ValueLayout.JAVA_INT, 0);
-			final /*DWORD*/ var undefined = session.allocate(ValueLayout.JAVA_INT, 0);
-			if (Windows.WaitCommEvent(h.handle(), eventMask, o) == 0)
+			final /*DWORD*/ var eventMask = arena.allocate(ValueLayout.JAVA_INT, 0);
+			final /*DWORD*/ var undefined = arena.allocate(ValueLayout.JAVA_INT, 0);
+			if (Windows_6.WaitCommEvent(h.handle(), eventMask, o) == 0)
 				waitPendingIO(h, o, undefined);
-			Windows.CloseHandle(_OVERLAPPED.hEvent$get(o));
+			Windows_6.CloseHandle(_OVERLAPPED.hEvent$get(o));
 			// note if event mask was changed while waiting for event we return 0
 			return eventMask.get(ValueLayout.JAVA_INT, 0);
 		}
 	}
 
 	@Override
-	int status(final MemorySession session, final Status type) throws IOException {
-		/*DWORD*/ final var value = session.allocate(ValueLayout.JAVA_INT, 0);
+	int status(final Arena arena, final Status type) throws IOException {
+		/*DWORD*/ final var value = arena.allocate(ValueLayout.JAVA_INT, 0);
 		int ret = 0;
 		final int status = switch (type) {
 			case Line -> {
@@ -552,16 +558,16 @@ final class WinSerialPort extends ReadWritePort {
 				// 0x0020 : DSR (data-set-ready) signal is on
 				// 0x0040 : ring indicator signal is on
 				// 0x0080 : RLSD (receive-line-signal-detect) signal is on
-				ret = Windows.GetCommModemStatus(h.handle(), value);
+				ret = Windows_6.GetCommModemStatus(h.handle(), value);
 				yield value.get(ValueLayout.JAVA_INT, 0);
 			}
 			case AvailableInput -> {
-				final var stat = _COMSTAT.allocate(session);
-				ret = Windows.ClearCommError(h.handle(), value, stat);
+				final var stat = _COMSTAT.allocate(arena);
+				ret = Windows_6.ClearCommError(h.handle(), value, stat);
 				yield _COMSTAT.cbInQue$get(stat);
 			}
 			case Error -> {
-				ret = Windows.ClearCommError(h.handle(), value, Windows.NULL());
+				ret = Windows_6.ClearCommError(h.handle(), value, Windows_8.NULL());
 				final int errors = value.get(ValueLayout.JAVA_INT, 0);
 				commErrors(errors);
 				yield errors;
@@ -573,21 +579,21 @@ final class WinSerialPort extends ReadWritePort {
 	}
 
 	@Override
-	void timeouts(final MemorySession session, final Timeouts timeouts) throws IOException {
-		final var to = _COMMTIMEOUTS.allocate(session);
+	void timeouts(final Arena arena, final Timeouts timeouts) throws IOException {
+		final var to = _COMMTIMEOUTS.allocate(arena);
 		_COMMTIMEOUTS.ReadIntervalTimeout$set(to, timeouts.readInterval());
 		_COMMTIMEOUTS.ReadTotalTimeoutMultiplier$set(to, timeouts.readTotalMultiplier());
 		_COMMTIMEOUTS.ReadTotalTimeoutConstant$set(to, timeouts.readTotalConstant());
 		_COMMTIMEOUTS.WriteTotalTimeoutMultiplier$set(to, timeouts.writeTotalMultiplier());
 		_COMMTIMEOUTS.WriteTotalTimeoutConstant$set(to, timeouts.writeTotalConstant());
-		if (Windows.SetCommTimeouts(h.handle(), to) == 0)
+		if (Windows_6.SetCommTimeouts(h.handle(), to) == 0)
 			throw newIoException();
 	}
 
 	@Override
-	Timeouts timeouts(final MemorySession session) throws IOException {
-		final var to = _COMMTIMEOUTS.allocate(session);
-		if (Windows.GetCommTimeouts(h.handle(), to) == 0)
+	Timeouts timeouts(final Arena arena) throws IOException {
+		final var to = _COMMTIMEOUTS.allocate(arena);
+		if (Windows_6.GetCommTimeouts(h.handle(), to) == 0)
 			throw newIoException();
 		return new Timeouts(_COMMTIMEOUTS.ReadIntervalTimeout$get(to),
 				_COMMTIMEOUTS.ReadTotalTimeoutMultiplier$get(to), _COMMTIMEOUTS.ReadTotalTimeoutConstant$get(to),
@@ -597,53 +603,53 @@ final class WinSerialPort extends ReadWritePort {
 	@Override
 	void dispatchEvents(final int eventMask) {
 		// data events
-		if (isSet(eventMask, Windows.EV_RXCHAR()))
+		if (isSet(eventMask, Windows_2.EV_RXCHAR()))
 			logger.log(TRACE, "EV_RXCHAR");
-		if (isSet(eventMask, Windows.EV_RXFLAG()))
+		if (isSet(eventMask, Windows_2.EV_RXFLAG()))
 			logger.log(TRACE, "EV_RXFLAG");
 
 		// pin events
-		if (isSet(eventMask, Windows.EV_CTS()))
+		if (isSet(eventMask, Windows_2.EV_CTS()))
 			logger.log(TRACE, "EV_CTS");
-		if (isSet(eventMask, Windows.EV_DSR()))
+		if (isSet(eventMask, Windows_2.EV_DSR()))
 			logger.log(TRACE, "EV_DSR");
-		if (isSet(eventMask, Windows.EV_RLSD()))
+		if (isSet(eventMask, Windows_2.EV_RLSD()))
 			logger.log(TRACE, "EV_RLSD");
-		if (isSet(eventMask, Windows.EV_BREAK()))
+		if (isSet(eventMask, Windows_2.EV_BREAK()))
 			logger.log(TRACE, "EV_BREAK");
-		if (isSet(eventMask, Windows.EV_RING()))
+		if (isSet(eventMask, Windows_2.EV_RING()))
 			logger.log(TRACE, "EV_RING");
 
 		// error event
-		if (isSet(eventMask, Windows.EV_ERR()))
+		if (isSet(eventMask, Windows_2.EV_ERR()))
 			logger.log(TRACE, "EV_ERR");
 	}
 
 	private void commErrors(final int errors) {
-		if (isSet(errors, Windows.CE_RXOVER()))
+		if (isSet(errors, Windows_2.CE_RXOVER()))
 			logger.log(TRACE, "CE_RXOVER");
-		if (isSet(errors, Windows.CE_OVERRUN()))
+		if (isSet(errors, Windows_2.CE_OVERRUN()))
 			logger.log(TRACE, "CE_OVERRUN");
-		if (isSet(errors, Windows.CE_RXPARITY()))
+		if (isSet(errors, Windows_2.CE_RXPARITY()))
 			logger.log(TRACE, "CE_RXPARITY");
-		if (isSet(errors, Windows.CE_FRAME()))
+		if (isSet(errors, Windows_2.CE_FRAME()))
 			logger.log(TRACE, "CE_FRAME");
-		if (isSet(errors, Windows.CE_BREAK()))
+		if (isSet(errors, Windows_2.CE_BREAK()))
 			logger.log(TRACE, "CE_BREAK");
 	}
 
 	private static final int QUERY_GETLASTERROR = -1;
 
 	private static String formatWinError(/*DWORD*/ final int error) {
-		final int err = error == QUERY_GETLASTERROR ? Windows.GetLastError() : error;
+		final int err = error == QUERY_GETLASTERROR ? Windows_5.GetLastError() : error;
 		final int size = 256;
 
-		try (var session = MemorySession.openConfined()) {
-			final var buf = session.allocateArray(ValueLayout.JAVA_BYTE, size);
-			int len = Windows.FormatMessageA(
-					Windows.FORMAT_MESSAGE_FROM_SYSTEM() | Windows.FORMAT_MESSAGE_IGNORE_INSERTS()
-					| Windows.FORMAT_MESSAGE_MAX_WIDTH_MASK(),
-					Windows.NULL(), err, 0, buf, size, Windows.NULL());
+		try (var arena = Arena.openConfined()) {
+			final var buf = arena.allocateArray(ValueLayout.JAVA_BYTE, size);
+			int len = Windows_6.FormatMessageA(
+					Windows_2.FORMAT_MESSAGE_FROM_SYSTEM() | Windows_2.FORMAT_MESSAGE_IGNORE_INSERTS()
+					| Windows_2.FORMAT_MESSAGE_MAX_WIDTH_MASK(),
+					Windows_8.NULL(), err, 0, buf, size, Windows_8.NULL());
 			while (len > 3 && (buf.get(ValueLayout.JAVA_BYTE, len - 1) == ' '
 					|| buf.get(ValueLayout.JAVA_BYTE, len - 1) == '.'))
 				--len;
